# berrydb

./: .appveyor.yml  .clang_complete  .gitmodules  .travis.yml  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/: berrydb.h
include/berrydb/: catalog.h  database.h  manager.h  options.h  ostream_ops.h  pool.h  space.h  span.h  status.h  store.h  string_view.h  transaction.h  types.h  version.h  vfs.h
platform/berrydb/: platform.h
platform/berrydb/platform/: alloc.h  checks.h  compiler.h  config.h.in  dcheck.h  endianness.h  hashing.h  string_view.h  types.h
src/: catalog_impl.cc  catalog_impl.h  database.cc  debug.h  free_page_list.cc  free_page_list.h  free_page_list_format.cc  free_page_list_format.h  free_page_list_format_unittest.cc  free_page_list_unittest.cc  free_page_manager.cc  free_page_manager.h  manager.cc  page.cc  page.h  page_pool.cc  page_pool.h  page_pool_unittest.cc  page_unittest.cc  pinned_page.h  pinned_page_unittest.cc  pool.cc  pool_impl.cc  pool_impl.h  space.h  space_impl.cc  space_impl.h  store.cc  store_impl.cc  store_impl.h  store_impl_unittest.cc  string_view_unittest.cc  transaction_impl.cc  transaction_impl.h  version_unittest.cc.in
src/api/: catalog.cc  options.cc  ostream_ops.cc  ostream_ops_unittest.cc  pool.cc  pool_unittest.cc  space.cc  span_unittest.cc  status.cc  status_unittest.cc  store.cc  store_unittest.cc  string_view_unittest.cc  transaction.cc  version_unittest.cc.in  vfs.cc
src/bench/: benchmark_main.cc  crc32c_benchmark.cc  snappy_benchmark.cc  vfs_benchmark.cc
src/cli/: cli.cc
src/embedder_tests/: alloc_unittest.cc  compiler_unittest.cc  dcheck_unittest.cc  endianness_unittest.cc  string_view_unittest.cc  vfs_unittest.cc
src/format/: store_header.cc  store_header.h  store_header_unittest.cc
src/test/: block_access_file_wrapper.cc  block_access_file_wrapper.h  file_deleter.cc  file_deleter.h  file_deleter_unittest.cc  test_main.cc
src/util/: checks.h  checks_unittest.cc  endianness.h  endianness_unittest.cc  linked_list.h  linked_list_unittest.cc  platform_allocator.h  platform_allocator_unittest.cc  platform_deleter.h  platform_deleter_unittest.cc  span_util.h  span_util_unittest.cc  unique_ptr.h  unique_ptr_unittest.cc  vfs_stubs.cc
src/vfs/: libc_vfs.cc
